--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<audio controls><source src="spaceship-cockpit-sounds-for-stu.mp3" type="audio/mp3">Your browser does not support the audio tag.</audio>
+<audio controls autoplay loop><source src="spaceship-cockpit-sounds-for-stu.mp3" type="audio/mp3">Your browser does not support the audio tag.</audio>
